# chronos-v3

./: .env.prod.example  .gitignore  CLAUDE.md  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  ops-ai-agent-design-v2.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  subagent-design.md  todo.md  tsconfig.json  velvety-sleeping-tower.md  zippy-riding-graham.md
ops-agent/: pyproject.toml
ops-agent/alembic/: env.py
ops-agent/alembic/versions/: 319e15e52adb_005_add_attachments_table.py  a1b2c3d4e5f6_003_incident_history.py  a5b6c7d8e9f0_010_add_incident_fk_indexes.py  c1d2e3f4a5b6_006_add_infra_type_conn_config.py  c7d8e9f0a1b2_012_simplify_services.py  d8e9f0a1b2c3_013_rename_infrastructure_to_connection.py  e3f4a5b6c7d8_008_monitoring_sources.py
ops-agent/incident_history/: sample_disk_full.md  sample_nginx_502.md
ops-agent/src/: config.py  main.py
ops-agent/src/agent/: event_publisher.py  graph.py  state.py
ops-agent/src/api/: approvals.py  asr.py  connections.py  documents.py  incidents.py  infrastructures.py  monitoring_sources.py  projects.py  schemas.py  services.py
ops-agent/src/connectors/: http.py  k8s.py  loki.py
ops-agent/src/db/: connection.py  models.py  vector_store.py
ops-agent/src/lib/: chunker.py  embedder.py  errors.py  file_parsers.py  image_describer.py  logger.py  redis.py
ops-agent/src/services/: agent_runner.py  approval_service.py  asr_service.py  connection_service.py  document_service.py  incident_history_service.py  incident_service.py  infrastructure_service.py  project_service.py  service_catalog.py
ops-agent/tests/: conftest.py  test_agent.py  test_api.py  test_api_documents.py  test_api_monitoring_sources.py  test_api_projects.py  test_api_services.py  test_ask_human.py  test_asr.py  test_chunker.py  test_crypto.py  test_document_service.py  test_e2e_flow.py  test_embedder.py  test_exec_tools.py  test_file_parsers.py  test_gather_context.py  test_graph.py  test_health.py  test_history_agent.py  test_http_connector.py  test_http_tools.py  test_image_describer.py  test_incident_history_service.py  test_k8s_connector.py  test_kb_agent.py  test_knowledge_tools.py  test_loki_connector.py  test_models.py  test_monitoring_source_service.py  test_monitoring_tools.py  test_project_service.py  test_prometheus_connector.py  test_redis_pubsub.py  test_reranker.py  test_safety.py  test_service_catalog.py  test_services.py  test_ssh_connector.py  test_vector_store.py
server/: .env.example  Dockerfile  bunfig.toml  entrypoint.sh  package.json  pyproject.toml  tsconfig.json
server/.claude/: settings.local.json
server/alembic/: env.py
server/scripts/: test-agent.sh  test.sh
server/src/: env.py  env.ts  main.py  main.ts
server/src/api/: agent.ts  (+16 more)
server/tests/: auth.test.ts  conftest.py  factories.py  helpers.ts  notification-settings.test.ts  servers.test.ts  services.test.ts  setup.ts  test_ops_agent_runtime_hints.py  test_shell_wrappers.py  test_skill_service.py  test_ssh_sudo.py  test_tool_classifier_bypass.py  versions.test.ts
test/: pyproject.toml  pytest.ini
test/api/: conftest.py  test_history_agent.py  test_history_retrieval.py  test_incident_events.py  test_kb_agent.py  test_kb_retrieval.py  test_main_agent_guardrails.py  test_skill_api.py  test_skill_matching.py  test_skill_service.py
test/e2e/: conftest.py  test_skill_browser.py  test_skill_e2e_full.py  test_skill_lifecycle.py
test/lib/: bootstrap.py
(+741 files in other folders)
