[project]
name = "ops-agent-tests"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "ops-agent",
]

[tool.uv.sources]
ops-agent = { path = "../server", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
]

[tool.pytest.ini_options]
testpaths = ["e2e", "api"]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
addopts = "-s -v"
markers = [
    "e2e: End-to-end tests requiring Docker and full stack",
    "api: API integration tests requiring running server",
]
